<resources>
    <string name="app_name">Video Game Review</string>
    <string name="pref_file">preference_file</string>
    <string name="pref_login_status">login_status</string>
    <string name="pref_login_firstTime">first_time</string>
    <string name="pref_user_Id">user_Id</string>
    <string name="pref_user_name">user_name</string>
    <string name="pref_user_image">user_image</string>
    <string name="pref_user_email">user_email</string>
    <string name="pref_access_token">access_token</string>
    <string name="pref_token_type">token_type</string>
    <string name="pref_token_exp">token_exp</string>
    <string name="pref_user_number">user_number</string>
    <string name="pref_user_totalDonate">user_totalDonate</string>
    <string name="pref_user_lastDonate">user_lastDonate</string>
    <string name="pref_user_nextDonate">user_nextDonate</string>
    <string name="pref_user_location">user_location</string>
    <string name="pref_user_available_for_donate">user_available_for_donate</string>
    <string name="pref_user_onBoarding">onBoarding</string>
    <string name="pref_user_notification">notification</string>
    <string name="device_token_update">toke_update</string>
    <string name="device_token">token</string>
    <string name="pref_default_topic">default_topic</string>
    <string name="pref_aes_key">9Hh6g6z7aofDER77</string>
    <string name="pref_referral_Code">referral_code</string>
    <string name="pref_location_added_count">location_added_count</string>
    <string name="pref_profile_completion_mode">profile_completion_mode</string>
    <string name="pref_profile_completion_count">profile_completion_count</string>
    <string name="appName">Video Game Review</string>
    <string name="app_version">App version 1.0</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="Or">OR</string>
    <string name="Emergency">Emergency</string>
    <string name="Sign_up">Create new account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="Login">Login</string>
    <string name="todo">TODO</string>
    <string name="username_or_phone_number">Username or Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="Continue">Continue</string>
    <string name="create_an_account">Create An Account</string>
    <string name="by_clicking_continue_you_will_proceed_to_the_verification">By clicking continue you will proceed to the verification</string>
    <string name="agree_with_privacy_amp_policy"><![CDATA[Agree with privacy and policy]]></string>
    <string name="More">More</string>
    <string name="History">History</string>
    <string name="Requests">Request</string>
    <string name="Find_donors">Find Donor</string>
    <string name="Profile">Profile</string>
    <string name="Change_password">Change Password</string>
    <string name="About">About</string>
    <string name="BackDoor">BackDoor</string>
    <string name="developerName">Al Mahmud Riaz</string>
    <string name="develop_by">Develop By</string>
    <string name="double_hipen">--</string>
    <string name="total_donate">Total Donate</string>
    <string name="last_donate">Last Donate</string>
    <string name="location">Location</string>
    <string name="location_imp">Location <font color='red'>*</font></string>
    <string name="email">Email</string>
    <string name="last_donation">Last Donation</string>
    <string name="call_for_blood">Call For Blood</string>
    <string name="date">Date</string>
    <string name="date_imp">Date <font color='red'>*</font></string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="requested_for">Requested For</string>
    <string name="requested_by">Requested By</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="time">Time</string>
    <string name="relation">Relation</string>
    <string name="contact">Contact</string>
    <string name="full_details">Full Details</string>
    <string name="select_location">Select Location</string>
    <string name="have_you_donate_blood_before">Have you Donate Blood before?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="life">Life</string>
    <string name="cell">Cell</string>
    <string name="blood_group">Blood Group</string>
    <string name="user_response">User Response</string>
    <string name="response_your_blood_request">Response your blood request</string>
    <string name="request_for">Request for</string>
    <string name="aPos">A+</string>
    <string name="aNeg">A-</string>
    <string name="bPos">B+</string>
    <string name="bNeg">B-</string>
    <string name="oPos">O+</string>
    <string name="oNeg">O-</string>
    <string name="abPos">AB+</string>
    <string name="abNeg">AB-</string>
    <string name="search_donor">Search Donor</string>
    <string name="choose_blood_group">Choose Blood Group</string>
    <string name="search_for_blood_donors_around_you">Search for blood donors around you</string>
    <string name="find_donors">Find Donors</string>
    <string name="request_for_blood">Request For Blood</string>
    <string name="request_for_blood_whenever_wherever_you_need">Request for blood whenever wherever you need</string>
    <string name="enter_location">Enter Location</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose time</string>
    <string name="blood_unit">Blood Unit</string>
    <string name="enter_blood_unit">Enter blood unit</string>
    <string name="patient">Patient</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="relation_with_patient">Relation with patient</string>
    <string name="request_for_donor">Request for Donor</string>
    <string name="aiub_solution">AIUB Solution</string>
    <string name="by_backdoor">By BackDoor</string>
    <string name="countryCode">+88</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_confirm_password">Enter your confirm password</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="mark_as_complete"> Mark as Complete</string>
    <string name="response">Response</string>
    <string name="accept_request">Accept Request  </string>
    <string name="no_request_found">No Request Found</string>
    <string name="no_response_found">No Response Found</string>
    <string name="moto">It\'s not about 450ml liquid, It\'s a new Life</string>
    <string name="about_moto">It\'s not about 450ml liquid,\n It\'s a new Life</string>
    <string name="see_all">See All</string>
    <string name="accept">Accept</string>
    <string name="last_3">Last 3</string>
    <string name="notification">Notification</string>
    <string name="report">Report</string>
    <string name="call_for_cancel">Call For Cancel</string>
    <string name="fake">Fake</string>
    <string name="spam">Spam</string>
    <string name="business_purpose">Business Purpose</string>
    <string name="hate_speech">Hate Speech</string>
    <string name="others">Others</string>
    <string name="false_information">False Information</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="select_district">Select District</string>
    <string name="select_area">Select Area</string>
    <string name="finish">Finish</string>
    <string name="donors_list">Donors List</string>
    <string name="found_donors_with">Found donors with</string>
    <string name="update_request">Update Request</string>
    <string name="gender">Gender</string>
    <string name="update_blood_request">Update Blood Request</string>
    <string name="next_donation">Next Donation</string>
    <string name="donations">Donations</string>
    <string name="cancel_amp_call_user"><![CDATA[Cancel & Call User]]></string>
    <string name="request_cancel">Request Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="contact_with_us">Contact with us</string>
    <string name="available_for_donate">Available for Donate</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="developed_by">Developed by</string>
    <string name="backdoor_it">BackDoor IT</string>
    <string name="dedicate">Dedicated to</string>
    <string name="donate_status">Donate Status</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="not_now">Not Now</string>
    <string name="title">Title</string>
    <string name="title_imp">Title <font color='red'>*</font></string>
    <string name="enter_short_title">Enter Short Title</string>
    <string name="call">Call</string>
    <string name="refresh">Refresh</string>
    <string name="make_new_blood_request">Make New Blood Request</string>
    <string name="blood_request">Blood Post</string>
    <string name="donate_blood_for">Donate Blood For</string>
    <string name="view_profile">View Profile</string>
    <string name="confirm_blood_donate">Confirm Blood Donate</string>
    <string name="remove_user">Remove User</string>
    <string name="cancel_blood_donate_request">Cancel Blood Donate Request</string>
    <string name="suggest">Suggest</string>
    <string name="friend">Friend</string>
    <string name="family">Family</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_email_optional">Enter Your Email (Optional)</string>
    <string name="how_many_times_have_you_donated_blood">How many times have you donated blood?</string>
    <string name="enter_the_last_donated_date">Enter the last donated date.</string>
    <string name="next">Next</string>
    <string name="message">Message</string>
    <string name="others_message">Others message</string>
    <string name="enter_address">Enter Address</string>
    <string name="details">Details</string>
    <string name="see_received_blood_request_and_also_check_your_request_status">See received blood request and also check your request status</string>
    <string name="life_saved">Life Saved</string>
    <string name="you_are_a_real_hero">You are a real Hero</string>
    <string name="colon">:</string>
    <string name="enter_the_verification_code_that_has_been_sent_to_your_phone_number">Enter the verification code that has been sent to your Phone Number</string>
    <string name="verification">Verification</string>
    <string name="don_t_receive_any_code">Don\'t receive any code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_otp_code">Enter OTP Code</string>
    <string name="search_user">Search User</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="type_your_username">Type your Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="new_review">New Review</string>
    <string name="rating">Rating</string>
</resources>