<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/round_bottom_dialog"
    android:orientation="vertical">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_input_field"
        android:backgroundTint="@color/whiteLight" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/new_review"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <RatingBar
        android:id="@+id/ratingForNewReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:numStars="5"
        android:backgroundTint="@color/red"
        android:stepSize=".1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/message"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/messageBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autoLink="all"
        android:autofillHints="Message"
        android:background="@drawable/round_input_field"
        android:gravity="top|left"
        android:hint="@string/Login"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="5"
        android:maxLines="10"
        android:maxLength ="2000"
        android:minLines="5"
        android:scrollbars="none"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="15dp"
        android:visibility="visible"
        app:cardCornerRadius="5dp"
        app:cardElevation="4dp">

        <Button
            android:id="@+id/submitReviewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/submit"
            android:textColor="@color/white" />


    </androidx.cardview.widget.CardView>


</LinearLayout>