<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="authViewModel"
            type="com.backdoor.vgr.viewmodel.AuthViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".View.LoginSignUpActivity.SignUpActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:visibility="visible"
            app:cardCornerRadius="0dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="0dp"
                    android:contentDescription="@string/todo"
                    android:onClick="@{()->authViewModel.onBackBtnPress()}"
                    android:src="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/create_an_account"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:visibility="visible" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pageHeader"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/create_an_account"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/type_your_username"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/usernameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/type_your_username"
                    android:background="@drawable/edit_text_round_border"
                    android:hint="@string/type_your_username"
                    android:inputType="text"
                    android:textAllCaps="false"
                    android:autoText="false"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/enter_your_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <EditText
                        android:id="@+id/firstNameTxt"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/first_name"
                        android:background="@drawable/edit_text_round_border"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/lastNameTxt"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:autofillHints="@string/last_name"
                        android:background="@drawable/edit_text_round_border"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/enter_your_email_address"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_round_border"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="18dp"
                    android:visibility="gone"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp">

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="25sp" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Password"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/enter_your_password"
                    android:background="@drawable/edit_text_round_border"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/rePasswordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/enter_your_password"
                    android:background="@drawable/edit_text_round_border"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/privacyCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:text="@string/agree_with_privacy_amp_policy"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <Button
                        android:id="@+id/signUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/background_button"
                        android:backgroundTint="@color/red"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Sign_up"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>