<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="androidx.core.content.ContextCompat" />

        <variable
            name="authViewModel"
            type="com.backdoor.vgr.viewmodel.AuthViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        tools:context=".View.Activity.IntroActivity">

        <LinearLayout
            android:id="@+id/logoAndName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40000000">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="13dp">

                <ImageView
                    android:id="@+id/AppLogo"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:padding="5dp"
                    android:src="@drawable/logo" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textColor="@color/red"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/version_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errorTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@{authViewModel.errorMessage}"
            android:textColor="@{ContextCompat.getColor(context, authViewModel.errorMessageColor)}"
            android:textSize="15sp"
            android:visibility="@{authViewModel.errorMsgShow == 1 ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/version_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:indeterminateTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoAndName"
            app:layout_constraintVertical_bias="0.666" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>